--- a/src/app/components/instructies/instructies.component.html
+++ b/src/app/components/instructies/instructies.component.html
@@ -7,7 +7,7 @@
 
 <input type="button" (click)="getSequences()" value="Haal de danspasjes op">
 </div>
-<div style="margin-left:50px; float:left"> <img id="lichaamsdeell"  src="../../../assets/redFeet2.png"></div>
+<div style="margin-left:50px; float:left"> <img id="lichaamsdeell"  src="../../../assets/blueHand1.png"></div>
 <div >
     <img class="bodyfigure" src="../../../assets/bodyfigure.png">
     <img *ngIf="!keypoint1" id="keypoint1" src="../../../assets/yellowcircle.png">
